--- a/style.css
+++ b/style.css
@@ -22,9 +22,11 @@ th {
 }
 
 button {
-  /*margin: 10px auto 10px auto;*/
-  text-align: center;
-  display: inline;
+  display: block;
+  margin: 20px auto 10px auto;
+  width: 250px;
+  height: 50px;
+  font-size: 15px;
 }
 
 .total {
